appcharts/templates/phpapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: php-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
        - name: php-app
          image: 442042522885.dkr.ecr.eu-west-2.amazonaws.com/jenkins-repo:latest
          ports:
            - containerPort: 80
