appcharts/templates/phpapp-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: php-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: php-app
