appcharts/templates/phpmyadmin-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: phpmyadmin-service
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 80
  selector:
    app: phpmyadmin
